# C-CPPStudy

MIPTStudy/BinaryCalc-redevelop/: binCalc.cpp  bin_calc_expr  binary_calc  calc
MIPTStudy/BinaryCalculator/: calc  main.cpp
MIPTStudy/DegreesRadiansCalc/: main.cpp
MIPTStudy/DegreesRadiansCalc-passed/: calc
MIPTStudy/FractalShow/: CMakeLists.txt  main.cpp  std_lib_facilities.h
MIPTStudy/FractalShow/Graph_lib/: GUI.h  Graph.cpp  Graph.h  Point.h  Simple_window.cpp  Simple_window.h
